Bug 503524 - JSON.stringify does not condition number-typed space parameter per spec (r=sayrer).